--- a/package.json
+++ b/package.json
@@ -8,10 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "fireflyio-client": "git+ssh://git@github.com/dobobaie/fireflyio-client.git",
     "vue": "^2.6.10",
-    "vue-axios": "^2.1.5",
     "vue-cookies": "^1.6.1",
     "vue-jwt-decode": "^0.1.0",
     "vue-router": "^3.1.3",
